[package]
name = "radius-debug"
version = "0.1.0"
authors = ["Kris <kristhesavage@gmail.com>"]
edition = "2018"
publish = true
description = "Simple helper to filter the noise when debbuging FreeRADIUS server."
repository = "https://github.com/Caspinol/radius-debug"
keywords = ["radius", "freeradius", "debug"]

[dependencies]
regex = "1"
lazy_static = "1.1.0"
clap = "2.32.0"


[badges]

appveyor = { repository = "https://github.com/Caspinol/radius-debug", branch = "master", service = "github" }


