[package]
name = "radius-debug"
version = "0.1.2"
authors = ["Kris <kristhesavage@gmail.com>"]
edition = "2018"
publish = true
description = "Simple helper to filter the noise when debbuging FreeRADIUS server."
repository = "https://github.com/VersBinarii/radius-debug"
keywords = ["radius", "freeradius", "debug"]
license = "MIT"
readme = "README.md"

[dependencies]
regex = "1.3"
lazy_static = "1.4.0"
clap = "2.32.0"
